--- a/.github/workflows/publish-report.yaml
+++ b/.github/workflows/publish-report.yaml
@@ -6,8 +6,10 @@ on:
       - main
 
 jobs:
-  cypress-run:
+  publish-report:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v2
 
